PwcSF/backup/force-app/main/default/objects/ProductStore__c/ProductStore__c.object-meta.xml
<CustomObject>
    <label>ProductStore</label>
    <nameField>
        <label>ProductStore Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ProductStores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>