PwcSF/backup/force-app/main/default/objects/ProductStore__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Category</label>
    <referenceTo>Category__c</referenceTo>
    <relationshipLabel>ProductStores</relationshipLabel>
    <relationshipName>ProductStores</relationshipName>
    <type>Lookup</type>
</CustomField>