PwcSF/backup/force-app/main/default/objects/ProductStore__c/fields/Maker__c.field-meta.xml
<CustomField>
    <fullName>Maker__c</fullName>
    <label>Maker</label>
    <length>50</length>
    <type>Text</type>
</CustomField>